# fireflyframework-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MODULES.md  Makefile  README.md  docker-compose.yml
crates/actuator/: Cargo.toml  README.md
crates/actuator/src/: caches.rs  endpoint.rs  env_source.rs  exposure.rs  handler.rs  health.rs  http_exchanges.rs  introspection.rs  lib.rs  loggers.rs  metrics.rs  refresh.rs  scheduledtasks.rs  threaddump.rs
crates/actuator/tests/: actuator_test.rs  parity_test.rs
crates/admin/: Cargo.toml  README.md
crates/admin/assets/: index.html
crates/admin/examples/: dashboard.rs
crates/admin/src/: auth.rs  client.rs  config.rs  data.rs  deps.rs  env.rs  instance.rs  lib.rs  log.rs  router.rs  sse.rs  trace.rs  view.rs
crates/admin/tests/: http.rs
crates/aop/: Cargo.toml  README.md
crates/aop/src/: aspect.rs  global.rs  intercept.rs  join_point.rs  lib.rs  pointcut.rs  registry.rs
crates/backoffice/: Cargo.toml  README.md
crates/backoffice/src/: lib.rs
crates/cache/: Cargo.toml  README.md
crates/cache-postgres/: Cargo.toml  README.md
crates/cache-postgres/src/: lib.rs
crates/cache-postgres/tests/: postgres_cache_adapter_test.rs
crates/cache-redis/: Cargo.toml  README.md
crates/cache-redis/src/: lib.rs
crates/cache-redis/tests/: redis_adapter_test.rs  redis_integration_test.rs
crates/cache/src/: adapter.rs  fallback.rs  health.rs  lib.rs  manager.rs  memory.rs  noop.rs  typed.rs
crates/cache/tests/: cache_test.rs
crates/callbacks/: Cargo.toml  README.md
crates/callbacks/src/: core.rs  interfaces.rs  lib.rs  models.rs  sdk.rs  web.rs
crates/callbacks/tests/: dispatcher_test.rs  sdk_test.rs  web_test.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: actuator.rs  build.rs  cli.rs  completion.rs  db.rs  diagnostics.rs  error.rs  generate.rs  lib.rs  license.rs  main.rs  naming.rs  openapi.rs  openapi_client.rs  project.rs  run.rs  sbom.rs  scaffold.rs  templates.rs
crates/cli/tests/: compile_generated.rs  integration.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: error.rs  graphql.rs  grpc.rs  lib.rs  rest.rs  retry.rs  scaffold.rs  soap.rs  uri.rs  webclient.rs  websocket.rs
crates/client/tests/: client_test.rs  graphql_soap_test.rs  grpc_test.rs  webclient_test.rs  websocket_test.rs
crates/config/: Cargo.toml  README.md
crates/config-server/: Cargo.toml  README.md
crates/config-server/src/: backend.rs  lib.rs  server.rs
crates/config-server/tests/: backend.rs  server.rs
crates/config/src/: binder.rs  client.rs  error.rs  events.rs  introspect.rs  lib.rs  mask.rs  placeholder.rs  profile.rs  reload.rs  source.rs  yaml.rs
crates/config/tests/: config_test.rs  profile_expr_events_test.rs  pyfly_parity_test.rs
crates/container/: Cargo.toml  README.md
crates/container/src/: condition.rs  error.rs  lib.rs  provider.rs  registration.rs  scan.rs  scope.rs  value.rs
crates/container/tests/: container_basics.rs  custom_scope.rs  di_errors.rs  named_beans.rs  ordering.rs  provider_and_refresh.rs  public_spi.rs  scan_introspection.rs
crates/cqrs/: Cargo.toml  README.md
crates/cqrs/src/: authorization.rs  bus.rs  cache.rs  context.rs  correlation.rs  discovery.rs  eda_bridge.rs  error.rs  event.rs  fluent.rs  health.rs  lib.rs  metrics.rs  reactive.rs  validation.rs
crates/cqrs/tests/: cqrs_test.rs  pyfly_parity_test.rs  reactive_test.rs  validation_result_test.rs
crates/data/: Cargo.toml  README.md
crates/data-mongodb/: Cargo.toml  README.md
crates/data-mongodb/src/: document.rs  error.rs  lib.rs  observe.rs  repository.rs
crates/data-sqlx/: Cargo.toml  README.md
crates/data-sqlx/src/: binding.rs  connect.rs  db.rs  entity.rs  lib.rs  observe.rs  repository.rs  row.rs  sql.rs  tx.rs  writer.rs
crates/data-sqlx/tests/: mysql.rs  postgres.rs  sqlite.rs  transactional.rs  version.rs
crates/data/src/: auditing.rs  custom_query.rs  dialect.rs  filter.rs  lib.rs  mapper.rs  page.rs  pageable.rs  projection.rs  query_parser.rs  reactive.rs  repository.rs  routing.rs  soft_delete.rs  specification.rs
crates/ecm/: Cargo.toml  README.md
crates/ecm-esignature-logalty/: Cargo.toml  README.md
crates/ecm-esignature-logalty/src/: lib.rs
crates/ecm-esignature-logalty/tests/: rest_test.rs
crates/ecm-storage-aws/: Cargo.toml  README.md
crates/ecm-storage-aws/src/: lib.rs  sigv4.rs
crates/ecm-storage-aws/tests/: s3_integration.rs  s3_mock_test.rs
crates/ecm-storage-azure/: Cargo.toml  README.md
crates/ecm-storage-azure/src/: lib.rs  sharedkey.rs
crates/ecm-storage-azure/tests/: blob_integration.rs  blob_mock_test.rs
crates/ecm/src/: factory.rs  in_memory.rs  lib.rs  local.rs  noop.rs  ports.rs  service.rs
crates/eda/: Cargo.toml  README.md
crates/eda-kafka/: Cargo.toml  README.md
crates/eda-kafka/src/: broker.rs  config.rs  lib.rs
crates/eda-kafka/tests/: kafka_roundtrip.rs
crates/eda-postgres/: Cargo.toml  README.md
crates/eda-postgres/src/: broker.rs  lib.rs  sql.rs
crates/eda-rabbitmq/: Cargo.toml  README.md
crates/eda-rabbitmq/src/: broker.rs  config.rs  dispatch.rs  lib.rs
crates/eda-rabbitmq/tests/: roundtrip.rs
crates/eda-redis/: Cargo.toml  README.md
crates/eda-redis/src/: broker.rs  config.rs  lib.rs
crates/eda-redis/tests/: broker_test.rs  redis_integration_test.rs
crates/eda/src/: discovery.rs  dlq.rs  error.rs  event.rs  filter.rs  health.rs  inmemory.rs  kafka.rs  lib.rs  listener.rs  ports.rs  rabbitmq.rs  reactive.rs  registry.rs  serializer.rs
crates/eda/tests/: eda_test.rs  reactive_test.rs
crates/eventsourcing/: Cargo.toml  README.md
crates/eventsourcing/src/: aggregate.rs  error.rs  lib.rs  outbox.rs  projection.rs  repository.rs  snapshot.rs  sql_store.rs  upcaster.rs
crates/eventsourcing/tests/: eventsourcing_test.rs  pyfly_parity_test.rs
crates/firefly/: Cargo.toml  README.md
crates/firefly/src/: application.rs  context.rs  lib.rs
crates/firefly/tests/: application_context.rs  cache_macros.rs  domain_event_no_serde_json_dep.rs  event_listeners.rs  (+4 more)
crates/i18n/: Cargo.toml  README.md
(+846 files in other folders)
