[workspace]
resolver = "2"
members = [
    "crates/firefly",
    "crates/macros",
    "crates/starter-experience",
    "crates/reactive",
    "crates/kernel",
    "crates/utils",
    "crates/validators",
    "crates/web",
    "crates/config",
    "crates/i18n",
    "crates/cache",
    "crates/observability",
    "crates/data",
    "crates/cqrs",
    "crates/eda",
    "crates/eventsourcing",
    "crates/orchestration",
    "crates/rule-engine",
    "crates/plugins",
    "crates/lifecycle",
    "crates/actuator",
    "crates/scheduling",
    "crates/resilience",
    "crates/security",
    "crates/migrations",
    "crates/openapi",
    "crates/sse",
    "crates/transactional",
    "crates/testkit",
    "crates/client",
    "crates/config-server",
    "crates/idp",
    "crates/idp-internal-db",
    "crates/idp-keycloak",
    "crates/idp-azure-ad",
    "crates/idp-aws-cognito",
    "crates/ecm",
    "crates/ecm-storage-aws",
    "crates/ecm-storage-azure",
    "crates/ecm-esignature-docusign",
    "crates/ecm-esignature-adobe-sign",
    "crates/ecm-esignature-logalty",
    "crates/notifications",
    "crates/notifications-sendgrid",
    "crates/notifications-resend",
    "crates/notifications-twilio",
    "crates/notifications-firebase",
    "crates/callbacks",
    "crates/webhooks",
    "crates/starter-core",
    "crates/starter-application",
    "crates/starter-domain",
    "crates/starter-data",
    "crates/backoffice",
    "crates/admin",
    "crates/aop",
    "crates/cli",
    "crates/container",
    "crates/session",
    "crates/shell",
    "crates/websocket",
    "crates/notifications-smtp",
    "crates/cache-redis",
    "crates/eda-kafka",
    "crates/eda-rabbitmq",
    "crates/eda-postgres",
    "crates/eda-redis",
    "crates/cache-postgres",
    "crates/starter-web",
    "crates/data-sqlx",
    "crates/data-mongodb",
    "crates/session-redis",
    "crates/session-postgres",
    "crates/session-mongodb",
    "tests/integration",
    "samples/orders",
    "samples/reactive-banking",
    "samples/macro-quickstart",
    "samples/lumen",
    "samples/linkspike-core",
    "samples/linkspike-web",
    "samples/lumen-ledger/interfaces",
    "samples/lumen-ledger/models",
    "samples/lumen-ledger/core",
    "samples/lumen-ledger/web",
    "samples/lumen-ledger/sdk",
]

[workspace.package]
version = "26.6.12"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fireflyframework/fireflyframework-rust"
authors = ["Firefly Framework contributors"]
rust-version = "1.88"

[workspace.dependencies]
# ---- internal crates ----
firefly-reactive = { path = "crates/reactive", version = "26.6.12" }
firefly-kernel = { path = "crates/kernel", version = "26.6.12" }
firefly-utils = { path = "crates/utils", version = "26.6.12" }
firefly-validators = { path = "crates/validators", version = "26.6.12" }
firefly-web = { path = "crates/web", version = "26.6.12" }
firefly-config = { path = "crates/config", version = "26.6.12" }
firefly-i18n = { path = "crates/i18n", version = "26.6.12" }
firefly-cache = { path = "crates/cache", version = "26.6.12" }
firefly-observability = { path = "crates/observability", version = "26.6.12" }
firefly-data = { path = "crates/data", version = "26.6.12" }
firefly-cqrs = { path = "crates/cqrs", version = "26.6.12" }
firefly-eda = { path = "crates/eda", version = "26.6.12" }
firefly-eventsourcing = { path = "crates/eventsourcing", version = "26.6.12" }
firefly-orchestration = { path = "crates/orchestration", version = "26.6.12" }
firefly-rule-engine = { path = "crates/rule-engine", version = "26.6.12" }
firefly-plugins = { path = "crates/plugins", version = "26.6.12" }
firefly-lifecycle = { path = "crates/lifecycle", version = "26.6.12" }
firefly-actuator = { path = "crates/actuator", version = "26.6.12" }
firefly-scheduling = { path = "crates/scheduling", version = "26.6.12" }
firefly-resilience = { path = "crates/resilience", version = "26.6.12" }
firefly-security = { path = "crates/security", version = "26.6.12" }
firefly-migrations = { path = "crates/migrations", version = "26.6.12" }
firefly-openapi = { path = "crates/openapi", version = "26.6.12" }
firefly-sse = { path = "crates/sse", version = "26.6.12" }
firefly-transactional = { path = "crates/transactional", version = "26.6.12" }
firefly-testkit = { path = "crates/testkit", version = "26.6.12" }
firefly-client = { path = "crates/client", version = "26.6.12" }
firefly-config-server = { path = "crates/config-server", version = "26.6.12" }
firefly-idp = { path = "crates/idp", version = "26.6.12" }
firefly-idp-internal-db = { path = "crates/idp-internal-db", version = "26.6.12" }
firefly-idp-keycloak = { path = "crates/idp-keycloak", version = "26.6.12" }
firefly-idp-azure-ad = { path = "crates/idp-azure-ad", version = "26.6.12" }
firefly-idp-aws-cognito = { path = "crates/idp-aws-cognito", version = "26.6.12" }
firefly-ecm = { path = "crates/ecm", version = "26.6.12" }
firefly-ecm-storage-aws = { path = "crates/ecm-storage-aws", version = "26.6.12" }
firefly-ecm-storage-azure = { path = "crates/ecm-storage-azure", version = "26.6.12" }
firefly-ecm-esignature-docusign = { path = "crates/ecm-esignature-docusign", version = "26.6.12" }
firefly-ecm-esignature-adobe-sign = { path = "crates/ecm-esignature-adobe-sign", version = "26.6.12" }
firefly-ecm-esignature-logalty = { path = "crates/ecm-esignature-logalty", version = "26.6.12" }
firefly-notifications = { path = "crates/notifications", version = "26.6.12" }
firefly-notifications-sendgrid = { path = "crates/notifications-sendgrid", version = "26.6.12" }
firefly-notifications-resend = { path = "crates/notifications-resend", version = "26.6.12" }
firefly-notifications-twilio = { path = "crates/notifications-twilio", version = "26.6.12" }
firefly-notifications-firebase = { path = "crates/notifications-firebase", version = "26.6.12" }
firefly-callbacks = { path = "crates/callbacks", version = "26.6.12" }
firefly-webhooks = { path = "crates/webhooks", version = "26.6.12" }
firefly-starter-core = { path = "crates/starter-core", version = "26.6.12" }
firefly-starter-application = { path = "crates/starter-application", version = "26.6.12" }
firefly-starter-domain = { path = "crates/starter-domain", version = "26.6.12" }
firefly-starter-data = { path = "crates/starter-data", version = "26.6.12" }
firefly-backoffice = { path = "crates/backoffice", version = "26.6.12" }
firefly-admin = { path = "crates/admin", version = "26.6.12" }
firefly-aop = { path = "crates/aop", version = "26.6.12" }
firefly-cli = { path = "crates/cli", version = "26.6.12" }
firefly-container = { path = "crates/container", version = "26.6.12" }
firefly-session = { path = "crates/session", version = "26.6.12" }
firefly-shell = { path = "crates/shell", version = "26.6.12" }
firefly-websocket = { path = "crates/websocket", version = "26.6.12" }
firefly-notifications-smtp = { path = "crates/notifications-smtp", version = "26.6.12" }
firefly-cache-redis = { path = "crates/cache-redis", version = "26.6.12" }
firefly-eda-kafka = { path = "crates/eda-kafka", version = "26.6.12" }
firefly-eda-rabbitmq = { path = "crates/eda-rabbitmq", version = "26.6.12" }
firefly-eda-postgres = { path = "crates/eda-postgres", version = "26.6.12" }
firefly-eda-redis = { path = "crates/eda-redis", version = "26.6.12" }
firefly-cache-postgres = { path = "crates/cache-postgres", version = "26.6.12" }
firefly-starter-web = { path = "crates/starter-web", version = "26.6.12" }
firefly = { path = "crates/firefly", version = "26.6.12" }
firefly-macros = { path = "crates/macros", version = "26.6.12" }
firefly-data-sqlx = { path = "crates/data-sqlx", version = "26.6.12" }
firefly-data-mongodb = { path = "crates/data-mongodb", version = "26.6.12" }
firefly-session-redis = { path = "crates/session-redis", version = "26.6.12" }
firefly-session-postgres = { path = "crates/session-postgres", version = "26.6.12" }
firefly-session-mongodb = { path = "crates/session-mongodb", version = "26.6.12" }
firefly-starter-experience = { path = "crates/starter-experience", version = "26.6.12" }

# ---- async runtime + web ----
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "io-util", "net", "fs"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
reqwest = { version = "0.12", features = ["json"] }

# ---- serialization ----
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# ---- errors / ids / time ----
thiserror = "1"
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# ---- crypto / encoding ----
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
bcrypt = "0.15"
jsonwebtoken = "9"
rand = "0.8"

# ---- transports & infrastructure adapters ----
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams", "aio"] }
lapin = "2"
tokio-postgres = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "macros", "chrono", "uuid", "json"] }
mongodb = "3"
rdkafka = { version = "0.36", features = ["cmake-build", "tokio"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
tonic = "0.12"
tokio-tungstenite = "0.24"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
socket2 = "0.5"

# ---- proc-macro toolchain (firefly-macros) ----
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
darling = "0.20"
inventory = "0.3"

# ---- cli / templating / misc parity ----
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
minijinja = "2"
quick-xml = { version = "0.36", features = ["serialize"] }
globset = "0.4"
chrono-tz = "0.10"
include_dir = "0.7"
sysinfo = "0.32"
humantime = "2"

# ---- misc ----
regex = "1"
unicode-normalization = "0.1"
unicode-properties = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tempfile = "3"
