[package]
name = "firefly-actuator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — /actuator health, info, metrics, env, tasks, version endpoints"

[dependencies]
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
# The compile-time DI/route inventory the `/beans`, `/mappings`, and
# `/conditions` introspection endpoints render (read-only, no live container).
firefly-container = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
