[package]
name = "firefly-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Spring-Boot-Admin-style embedded dashboard: SPA, JSON API, SSE streams, traces, log buffer, instances"

[dependencies]
firefly-actuator = { workspace = true }
firefly-container = { workspace = true }
firefly-scheduling = { workspace = true }
firefly-orchestration = { workspace = true }
firefly-cqrs = { workspace = true }
firefly-security = { workspace = true }
firefly-lifecycle = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
include_dir = { workspace = true }
sysinfo = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
http-body-util = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
firefly-security = { workspace = true }
firefly-container = { workspace = true }
