[package]
name = "firefly-aop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Aspect-oriented advice: pointcut globs, JoinPoint, before/after/around chain executor"

[dependencies]
regex = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
