[package]
name = "firefly-aop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Aspect-oriented advice: pointcut globs, JoinPoint, before/after/around chain executor"

[dependencies]
regex = { workspace = true }
async-trait = { workspace = true }
# Crate-graph discovery of `#[aspect]`-declared aspects: each macro emits an
# `inventory::submit!` thunk that the process-global registry drains once on
# first use (the same pattern firefly-transactional uses for event listeners).
inventory = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
