[package]
name = "firefly-cache-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Redis cache adapter: SET PX/NX, SCAN prefix ops, stats, health"

[dependencies]
firefly-cache = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
firefly-cache = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
