[package]
name = "firefly-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Cache Adapter port + Memory / NoOp / Fallback + typed facade"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
