[package]
name = "firefly-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — firefly project scaffolding and introspection CLI"

[dependencies]
clap = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "firefly"
path = "src/main.rs"
