[package]
name = "firefly-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — firefly project scaffolding and introspection CLI"

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
firefly-migrations = { workspace = true }
firefly-openapi = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
axum = { workspace = true }

[[bin]]
name = "firefly"
path = "src/main.rs"
