[package]
name = "firefly-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — REST builder with retry, problem decode, correlation propagation; SOAP/gRPC/WS scaffolds"

[dependencies]
firefly-kernel = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
