[package]
name = "firefly-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — REST builder with retry, problem decode, correlation propagation; SOAP/gRPC/WS scaffolds"

[features]
# Real SOAP/gRPC/WebSocket protocol clients are feature-gated so the
# core REST builder stays dependency-light. The default feature set
# matches the Go-parity surface (REST + GraphQL only, no extra deps);
# opt into the heavier transports as needed.
default = []
# Enables [`WsBuilder`] / [`WsClient`] over `tokio-tungstenite`.
# (`futures` is now an unconditional dependency of the reactive WebClient.)
websocket = ["dep:tokio-tungstenite"]
# Enables [`GrpcBuilder`] over `tonic`'s `Channel` (insecure / plaintext).
grpc = ["dep:tonic"]
# Adds TLS support to [`GrpcBuilder::secured`] via tonic's `tls` feature.
grpc-tls = ["grpc", "tonic?/tls", "tonic?/tls-roots"]

[dependencies]
firefly-kernel = { workspace = true }
firefly-observability = { workspace = true }
firefly-reactive = { workspace = true }
# `stream` enables reqwest::Response::bytes_stream for the reactive
# WebClient's body_to_flux NDJSON / SSE decoder. Adding a feature to the
# catalog dependency (not a new dep) keeps the eager RestClient byte-stable.
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
# Needed unconditionally by the reactive WebClient (was previously only
# pulled in behind the `websocket` feature).
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
tokio-tungstenite = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }

[dev-dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
# The reactive WebClient tests spawn an in-process axum server emitting
# NDJSON / SSE; firefly-web is a dev-dep for parity with its reactive
# responders (the streams themselves are emitted directly here).
firefly-web = { workspace = true }
firefly-reactive = { workspace = true }

[package.metadata.docs.rs]
all-features = true
