[package]
name = "firefly-config-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Spring-Cloud-Config-compatible REST endpoint"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
