[package]
name = "firefly-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Typed YAML+env binding with profile selection"

[dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
