[package]
name = "firefly-cqrs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Command + query bus with validation + caching middleware"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
firefly-eda = { workspace = true }
firefly-kernel = { workspace = true }
firefly-observability = { workspace = true }
firefly-reactive = { workspace = true }
futures = { workspace = true }
# Link-time handler discovery: `#[command_handler]`/`#[query_handler]` submit a
# `HandlerRegistration` thunk drained by `register_discovered_handlers`.
inventory = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
