[package]
name = "firefly-data-mongodb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — document repository adapter over MongoDB"

[dependencies]
firefly-data = { workspace = true }
firefly-reactive = { workspace = true }
firefly-kernel = { workspace = true }
mongodb = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
